# -Stack_Overflow-searcher

./: .env  Cargo.toml  Dockerfile  README.md  auth_config.json  docker-compose.yml  index.js
docker/nginx/: Dockerfile  nginx.conf
docker/postgres/: Dockerfile
docker/rust/: Dockerfile
migrations/2021-01-01-191224_search_history/: down.sql  up.sql
migrations/2021-02-04-060326_search_history/: down.sql  up.sql
migrations/2021-02-09-031524_user/: down.sql  up.sql
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619
postgres-data/base/13395/: pg_internal.init
postgres-data/base/13442/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1255  1255_vm  1259  16385  16389  16393  16395  16402  16403  2224  2579  2604  2606  2608  2610  2619  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2690  2691  2696  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13395.stat  db_16384.stat  global.stat
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
static/: app.js  index.js  style.css
styles/: style.css
templates/: add_history.html  authenticated.html  history.html  index.html  index.js  login.html  search-form.html  signup.html
templates/register/: result.html
