[package]
name = "so_searcher"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.0.0"
actix-web = "3.3.2"
askama = "0.10.5"
config = "0.10.1"
serde = { version = "1.0.123", features = ["derive"] }
thiserror = "1.0.23"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"

[dev-dependencies]
pretty_assertions = "0.6.1"
